fix: potential fix to canvas scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ ul{
   position: fixed;
   top: 0;
   left: 0;
+  min-height: 100%;
   z-index: -1;
 }
 
